setup/Istio/Kiali/kiali_dashboard.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "${K8S_ENVIRONMENT}.kiali.slainte.at"     # must match Gateway host
  gateways:
    - "istio-system/http-slainte-gateway"
  http:
    - match:
      - uri:
          prefix: /kiali/     # adjust if Kiali is served at a different basePath    
      route:
        - destination:
            host: kiali.kiali.svc.cluster.local
            port:
              number: 20001     # adjust if your Kiali service uses a different port
---
